# S2_lab2_lab3

./: CMakeLists.txt  Matrix.h  Menu.cpp  Menu.h  MenuAll.cpp  MenuAll.h  MenuMatrix.cpp  MenuMatrix.h  MenuSequence.cpp  MenuSequence.h  MenuVector.cpp  MenuVector.h  Sequence.h  Vector.h  main.cpp
Base/: ArraySequence.cpp  DynamicArray.cpp  DynamicArray.h  LinkedList.cpp  LinkedList.h  LinkedListSequence.cpp
DataStructures/: Matrix.h  Vector.h
Sequence/: ArraySequence.h  LinkedListSequence.h  Sequence.h
Sort/: BatcherSort.h  BubbleSort.h  ISorter.h  QuickSort.h  SelectionSort.h
TestSort/: GenerateData.h  LoadTests.h  MenuTest.h
Tests/: Tests_AS and LLS.cpp  Tests_AS and LLS.h  Tests_DA and LL.cpp  Tests_DA and LL.h  Tests_Matrix.cpp  Tests_Matrix.h  Tests_Vector.cpp  Tests_Vector.h
interface_menu/: Menu.cpp  Menu.h  MenuAll.h  MenuMatrix.cpp  MenuMatrix.h  MenuSequence.cpp  MenuSequence.h  MenuSort.h  MenuVector.cpp  MenuVector.h
pointers/: Counter.h  ShrdPtr.h  UnqPtr.h
